# tour_chainNepal

./: .gitignore  Anchor.toml  Cargo.toml  Prompts.md  QUICK_START.bat  README.md  VERCEL_DEPLOY.md  build.sh  copy_idl.sh  deploy.sh  init-tree.sh  install-frontend.bat  package.json  patch_anchor.py  report.md  tourchain-strategy.md  vercel.json
apps/web/: package.json
apps/web/scripts/: add-checkpoints.ts  add-missing-services.ts  check-data.ts  cleanup-duplicates.ts  run-migration.ts  run-waitlist-migration.ts  seed-nepal-data.ts  setup-auth-trigger.ts  test-checkin.ts
apps/web/src/app/: error.tsx  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/explore/: page.tsx
apps/web/src/app/leaderboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/onboard/: page.tsx
apps/web/src/app/planner/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/app/vibe/: page.tsx
apps/web/src/app/waitlist/: page.tsx
apps/web/src/components/: ClientLayout.tsx  Navbar.tsx  SafeImage.tsx  SolanaProvider.tsx  WalletButton.tsx  WalletModal.tsx
apps/web/src/lib/: countries.ts  env.ts  errors.ts
apps/web/src/lib/api/: handler.ts
apps/web/src/lib/solana/: escrow.ts  (+1 more)
backend/: package.json
backend/src/: index.js
programs/tourchain_escrow/: Cargo.toml
programs/tourchain_escrow/src/: lib.rs
programs/tourchain_proof/: Cargo.toml
programs/tourchain_proof/src/: lib.rs
programs/tourchain_reputation/: Cargo.toml
scripts/: init-merkle-tree.ts
supabase/migrations/: 0005_auth_user_trigger.sql  0006_waitlist.sql
(+13 files in other folders)
